<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZinalAnalyseMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_authentification">AuthentificationActivity</string>
    <string name="hintphone">Numéro de téléphone</string>
    <string name="hintmdp">Mot De Passe</string>
    <string name="btcon">Se connecter</string>
    <string name="btins">S\'inscrire</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="text1">Demander un prélèvement rapidement</string>
    <string name="text2">AnalyseMe vous permet de demander un rendez-vous ou un prélèvement à domicile</string>
    <string name="bsui">Suivant</string>
    <string name="title_activity_welcom">WelcomActivity</string>
    <string name="tex2">24H/24 - 7j/7</string>
    <string name="tex22">Vous pouvez être sûr que notre application sera toujours disponible pour vous, que vous travaillez tars le soir ou tôt le matin</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="hintuser">Nom d\'utilisateur</string>
    <string name="hintage">Age</string>
    <string name="hincmdp">Confirmer mot de passe</string>
    <string name="textbtn">Valider</string>

    <string-array name="genre">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>

    <string name="title_activity_aceuille">AceuilleActivity</string>
    <string name="texrdv">Prendre un rendez-vous</string>
    <string name="textres">Consulter resultat</string>
    <string name="textcons">"Conseils et bien être "</string>
    <string name="textvac">Calendrier de vaccination</string>
    <string name="title_activity_conseils">ConseilsActivity</string>
    <string name="tc">Pour votre santé suivez ces conseils :</string>
    <string name="c1">1/ Faites de l\'exercice régulièrement. L\'exercice régulier est bénifique pour la santé physique et mentale.</string>
    <string name="c2">2/ Manger sainement : une alimentation sain et équilibré est essentielle pour maintenir une bonne santé. Essayez de consommer une variété de fruits, légumes, grains entiers, protéins maigres et graisses saines.</string>
    <string name="c3">3/ Hydratez-vous suffisamment</string>
    <string name="c4">4/ Evitez les comportements à risque : Evitez de fumer, de boire de l\'alchool et de consommer des drogues illicites.</string>
    <string name="c5">5/ Suivez les examens de santé réguliers : consultez régulièrement votre médcin et effectuez les examens de dépistage recommandés pour prévenir les maladies et les problèmes de santé.</string>
    <string name="fc">En suivant ces conseils vous pouvez maintenir une bonne santé et réduire le risque de dévlopper des maladies chroniques.</string>
    <string name="title_activity_rendezvous">RendezvousActivity</string>
    <string name="hintanalyse">Type d\'analyse</string>
    <string name="hintadresse">Adresse</string>
    <string name="hintdate">Date de prélèvement</string>
    <string name="hintheure">Horaire de prélèvement</string>

    <string-array name="prel">
        <item>Déplacement à domicile</item>
        <item>Prélèement à laboratoire</item>
    </string-array>

    <string name="title_activity_vaccin">VaccinActivity</string>

</resources>