<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AceuilleActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo1"
            android:layout_marginBottom="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <Button
                android:id="@+id/btnrdv"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@drawable/toprightbottomleft"               
                android:text="@string/texrdv" />

            <Button
                android:id="@+id/btnres"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@drawable/bottomrighttopleft"
                android:text="@string/textres"
                android:layout_marginLeft="1dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btncons"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:background="@drawable/bottomrighttopleft"
                android:text="@string/textcons" />

            <Button
                android:id="@+id/btnvacc"
                android:layout_width="140dp"
                android:layout_height="150dp"
                 android:background="@drawable/toprightbottomleft"
                android:text="@string/textvac"
                android:layout_marginLeft="1dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>